# api/openapi/model-registry-full-proposal.yaml
@@ -971,9 +971,14 @@ components:
       description: An ML model artifact.
       type: object
       allOf:
-        - $ref: "#/components/schemas/BaseArtifact"
+        - $ref: "#/components/schemas/WithBaseArtifactUpdate"
+        - $ref: "#/components/schemas/WithBaseResource"
+        - $ref: "#/components/schemas/WithBaseResourceCreate"
+        - $ref: "#/components/schemas/WithBaseResourceUpdate"
         - $ref: "#/components/schemas/ModelArtifactCreate"
         - type: object
+          required:
+            - artifactType
           properties:
             artifactType:
               type: string
@@ -982,8 +987,13 @@ components:
       description: A document.
       type: object
       allOf:
-        - $ref: "#/components/schemas/BaseArtifact"
+        - $ref: "#/components/schemas/WithBaseArtifactUpdate"
+        - $ref: "#/components/schemas/WithBaseResource"
+        - $ref: "#/components/schemas/WithBaseResourceCreate"
+        - $ref: "#/components/schemas/WithBaseResourceUpdate"
         - type: object
+          required:
+            - artifactType
           properties:
             artifactType:
               type: string
@@ -1047,27 +1057,25 @@ components:
       allOf:
         - $ref: "#/components/schemas/WithBaseResourceCreate"
         - $ref: "#/components/schemas/WithBaseResourceUpdate"
-        - $ref: "#/components/schemas/ModelVersionUpdate"
+        - $ref: "#/components/schemas/WithModelVersionUpdate"
       properties:
         registeredModelID:
           description: ID of the `RegisteredModel` to which this version belongs.
+          type: string
+    WithModelVersionUpdate:
+      description: Represents a ModelVersion belonging to a RegisteredModel.
+      type: object
+      properties:
+        state:
+          $ref: "#/components/schemas/ModelVersionState"
+        author:
+          description: Name of the author.
           type: string
     ModelVersionUpdate:
       description: Represents a ModelVersion belonging to a RegisteredModel.
       allOf:
         - $ref: "#/components/schemas/WithBaseResourceUpdate"
-        - type: object
-          properties:
-            state:
-              $ref: "#/components/schemas/ModelVersionState"
-            author:
-              description: Name of the author.
-              type: string
-    BaseArtifactCreate:
-      allOf:
-        - $ref: "#/components/schemas/WithBaseArtifactUpdate"
-        - $ref: "#/components/schemas/WithBaseResourceCreate"
-        - $ref: "#/components/schemas/WithBaseResourceUpdate"
+        - $ref: "#/components/schemas/WithModelVersionUpdate"
     WithBaseArtifactUpdate:  
       type: object
       properties:
@@ -1080,23 +1088,25 @@ components:
           $ref: "#/components/schemas/ArtifactState"
     BaseExecution:
       allOf:
-        - $ref: "#/components/schemas/BaseExecutionCreate"
+        - $ref: "#/components/schemas/WithBaseExecutionUpdate"
         - $ref: "#/components/schemas/WithBaseResource"
         - $ref: "#/components/schemas/WithBaseResourceCreate"
         - $ref: "#/components/schemas/WithBaseResourceUpdate"
     BaseExecutionCreate:
       allOf:
-        - $ref: "#/components/schemas/BaseExecutionUpdate"
+        - $ref: "#/components/schemas/WithBaseExecutionUpdate"
         - $ref: "#/components/schemas/WithBaseResourceCreate"
         - $ref: "#/components/schemas/WithBaseResourceUpdate"
+    WithBaseExecutionUpdate:
+      type: object
+      properties:
+        lastKnownState:
+          $ref: "#/components/schemas/ExecutionState"
     BaseExecutionUpdate:
       type: object
       allOf:
-        - type: object
-          properties:
-            lastKnownState:
-              $ref: "#/components/schemas/ExecutionState"
         - $ref: "#/components/schemas/WithBaseResourceUpdate"
+        - $ref: "#/components/schemas/WithBaseExecutionUpdate"
     MetadataValue:
       oneOf:
         - $ref: "#/components/schemas/MetadataIntValue"
@@ -1357,84 +1367,98 @@ components:
     InferenceServiceList:
       description: List of InferenceServices.
       type: object
+      properties:
+        items:
+          description: ""
+          type: array
+          items:
+            $ref: "#/components/schemas/InferenceService"
+          readOnly: false
       allOf:
-        - type: object
-          properties:
-            items:
-              description: ""
-              type: array
-              items:
-                $ref: "#/components/schemas/InferenceService"
-              readOnly: false
         - $ref: "#/components/schemas/BaseResourceList"
     ServeModelList:
       description: List of ServeModel entities.
       type: object
+      properties:
+        items:
+          description: Array of `ModelArtifact` entities.
+          type: array
+          items:
+            $ref: "#/components/schemas/ServeModel"
       allOf:
-        - type: object
-          properties:
-            items:
-              description: Array of `ModelArtifact` entities.
-              type: array
-              items:
-                $ref: "#/components/schemas/ServeModel"
         - $ref: "#/components/schemas/BaseResourceList"
     ServeModel:
       description: An ML model serving action.
       type: object
       allOf:
-        - $ref: "#/components/schemas/BaseExecution"
-        - $ref: "#/components/schemas/ServeModelCreate"
+        - $ref: "#/components/schemas/WithBaseExecutionUpdate"
+        - $ref: "#/components/schemas/WithBaseResource"
+        - $ref: "#/components/schemas/WithBaseResourceCreate"
+        - $ref: "#/components/schemas/WithBaseResourceUpdate"
+        - $ref: "#/components/schemas/WithServeModelCreate"
     ServeModelUpdate:
       description: An ML model serving action.
       allOf:
-        - $ref: "#/components/schemas/BaseExecutionUpdate"
+        - $ref: "#/components/schemas/WithBaseResourceUpdate"
+        - $ref: "#/components/schemas/WithBaseExecutionUpdate"
+    WithServeModelCreate:
+      description: An ML model serving action.
+      required:
+        - modelVersionId
+      type: object
+      properties:
+        modelVersionId:
+          description: ID of the `ModelVersion` that was served in `InferenceService`.
+          type: string
     ServeModelCreate:
       description: An ML model serving action.
       allOf:
-        - $ref: "#/components/schemas/BaseExecutionCreate"
-        - $ref: "#/components/schemas/ServeModelUpdate"
-        - required:
-            - modelVersionId
-          type: object
-          properties:
-            modelVersionId:
-              description: ID of the `ModelVersion` that was served in `InferenceService`.
-              type: string
+        - $ref: "#/components/schemas/WithBaseExecutionUpdate"
+        - $ref: "#/components/schemas/WithBaseResourceCreate"
+        - $ref: "#/components/schemas/WithBaseResourceUpdate"
+        - $ref: "#/components/schemas/WithServeModelCreate"
+    WithInferenceServiceUpdate:
+      description: >-
+        An `InferenceService` entity in a `ServingEnvironment` represents a deployed `ModelVersion` from a `RegisteredModel` created by Model Serving.
+      type: object
+      properties:
+        modelVersionId:
+          description: >-
+            ID of the `ModelVersion` to serve. If it's unspecified, then the latest `ModelVersion` by creation order will be served.
+          type: string
+        runtime:
+          description: Model runtime.
+          type: string
+        desiredState:
+          $ref: "#/components/schemas/InferenceServiceState"
     InferenceServiceUpdate:
       description: >-
         An `InferenceService` entity in a `ServingEnvironment` represents a deployed `ModelVersion` from a `RegisteredModel` created by Model Serving.
       allOf:
         - $ref: "#/components/schemas/WithBaseResourceUpdate"
-        - type: object
-          properties:
-            modelVersionId:
-              description: >-
-                ID of the `ModelVersion` to serve. If it's unspecified, then the latest `ModelVersion` by creation order will be served.
-              type: string
-            runtime:
-              description: Model runtime.
-              type: string
-            desiredState:
-              $ref: "#/components/schemas/InferenceServiceState"
+        - $ref: "#/components/schemas/WithInferenceServiceUpdate"
+    WithInferenceServiceCreate:
+      description: >-
+        An `InferenceService` entity in a `ServingEnvironment` represents a deployed `ModelVersion` from a `RegisteredModel` created by Model Serving.
+      required:
+        - registeredModelId
+        - servingEnvironmentId
+      type: object
+      properties:
+        registeredModelId:
+          description: ID of the `RegisteredModel` to serve.
+          type: string
+        servingEnvironmentId:
+          description: ID of the parent `ServingEnvironment` for this `InferenceService` entity.
+          type: string
     InferenceServiceCreate:
       description: >-
         An `InferenceService` entity in a `ServingEnvironment` represents a deployed `ModelVersion` from a `RegisteredModel` created by Model Serving.
       allOf:
         - $ref: "#/components/schemas/WithBaseResourceCreate"
         - $ref: "#/components/schemas/WithBaseResourceUpdate"
-        - $ref: "#/components/schemas/InferenceServiceUpdate"
-        - required:
-            - registeredModelId
-            - servingEnvironmentId
-          type: object
-          properties:
-            registeredModelId:
-              description: ID of the `RegisteredModel` to serve.
-              type: string
-            servingEnvironmentId:
-              description: ID of the parent `ServingEnvironment` for this `InferenceService` entity.
-              type: string
+        - $ref: "#/components/schemas/WithInferenceServiceUpdate"
+        - $ref: "#/components/schemas/WithInferenceServiceCreate"
   responses:
     NotFound:
       content:
